2001-11-01  Bruno Haible  <haible@clisp.cons.org>

	* msgfmt.c (check_plural_eval): Fix #if mistake.

2001-11-01  Bruno Haible  <haible@clisp.cons.org>

	* msgl-iconv.h (iconv_message_list): Add argument 'canon_from_code'.
	* msgl-iconv.c (iconv_message_list): Add argument 'canon_from_code'.
	(iconv_msgdomain_list): Update.
	* write-java.c (msgdomain_write_java): Update.
	* msgl-cat.c (catenate_msgdomain_list): Pass the canon_charsets[n][k]
	to iconv_message_list; the header entry that contained the charset
	specification may already have been removed from the message list.

2001-11-01  Bruno Haible  <haible@clisp.cons.org>

	* msgl-equal.h (string_list_equal): New declaration.
	* msgl-equal.c (string_list_equal): Export function.
	* message.h (struct altstr): New fields 'comment', 'comment_dot'.
	* msgl-cat.c: Include msgl-equal.h.
	(catenate_msgdomain_list): If all alternative comments are equal,
	use one copy of them, instead of concatenating them. Likewise for dot
	comments.
	* Makefile.am (libgettextsrc_la_SOURCES): Add msgl-equal.c.
	(msgmerge_SOURCES): Remove msgl-equal.c.

2001-10-31  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (noinst_HEADERS): Add read-java.h, write-java.h,
	format.h, msgunfmt.h.
	(EXTRA_DIST): Add project-id, gnu/gettext/*.java.
	* message.h (NFORMATS): Define via #define, not via an enum value.
	* format.h (struct formatstring_parser): Use PARAMS.
	* format-c.c (FAT_SIZE_MASK): Remove extraneous backslashes.
	* po-charset.c (po_lex_charset_set): Fix syntax error.
	* write-java.c (write_java_string): Drop hexdigit[] size.
	* x-java.l (add_object): Remove C++ style comment.

2001-10-28  Bruno Haible  <haible@clisp.cons.org>

	* hostname.c: Include "progname.h".
	(program_name): Remove variable.
	(main): Call set_program_name instead of setting program_name.

2001-10-28  Bruno Haible  <haible@clisp.cons.org>

	Create a libgettextsrc shared library.
	* Makefile.am (lib_LTLIBRARIES): New variable.